--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 .box{
     width: 50vw;
-    height: 60vh;
+    height: 50vh;
     background-color:hsl(207, 33%, 95%);
     float: right;
     border-bottom-left-radius: 50px;
@@ -15,7 +15,7 @@
 }
 .fa-bars{
     font-size: 35px;
-    margin-right: -60%;
+    margin-right: -50%;
     float: right;
     padding: 30px;
 }
@@ -23,21 +23,21 @@
     display: none;
 }
 .img{
-    width: 100vw;
-    height: 30vh;
+    width: 130vw;
+    height: 40vh;
     background-position: center;
     object-fit: contain;
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url(images/illustration-devices.svg);
     position: absolute;
-    top: 100px;
-    margin-right: -80px;
+    top: 90px;
+    /* right: -100px; */
 }
 .content{
     position: absolute;
     top: 290px;
-    padding:0px 30px 10px 20px;
+    padding:0px 30px 10px 30px;
     line-height: 30px;
 }
 .bt1{
@@ -73,7 +73,7 @@ p{
 .btns{
     position: absolute;
     top: 430px;
-    padding: 20px;
+    padding: 30px;
     margin-top: 10px;
 }
 .b1{
