--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }
 body{
     width: 100vw;
+    height: 100vh;
 }
 .box{
     width: 50vw;
@@ -40,7 +41,7 @@ body{
 .content{
     height: 40vh;
     position: absolute;
-    top: 450px;
+    top: 50%;
     padding:0px 30px 10px 30px;
     line-height: 30px;
 }
@@ -76,7 +77,7 @@ p{
 }
 .btns{
     position: absolute;
-    top: 550px;
+    top: 75%;
     padding: 30px;
     margin-top: 10px;
 }
@@ -119,8 +120,8 @@ p{
        color: hsl(230, 29%, 20%) ;
     }
     .img{
-        width: 60vw;
-        height: 100vh;
+        width: 50vw;
+        height: 80vh;
         position: absolute;
         top: 10px;
         left: 50%;
@@ -130,7 +131,7 @@ p{
     }
     .content{
         width: 50vw;
-        height: 100vh;
+        height: 80vh;
         position: absolute;
         top: 100px;
         padding-left: 150px;
