--- a/main.css
+++ b/main.css
@@ -122,8 +122,11 @@ p{
     .img{
         width: 50vw;
         height: 80vh;
+        background-size: cover;
+        object-fit: contain;
         position: absolute;
-        top: 10px;
+        background-position: left;
+        top: 90px;
         left: 50%;
     }
     .s1{
