--- a/main.css
+++ b/main.css
@@ -15,13 +15,14 @@ body{
     border-bottom-left-radius: 50px;
 }
 .logo{
-    padding: 34px;
+    padding: 20px;
+    font-size: 20px;
 }
 .fa-bars{
-    font-size: 35px;
+    font-size: 20px;
     margin-right: -50%;
     float: right;
-    padding: 30px;
+    padding: 20px;
 }
 .options{
     display: none;
@@ -29,19 +30,18 @@ body{
 .img{
     width: 100vw;
     height: 40vh;
-    background-position: center;
+    background-position: left;
     object-fit: contain;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-image: url(images/illustration-devices.svg);
     position: absolute;
-    top: 90px;
-    /* right: -100px; */
+    top: 70px;
 }
 .content{
-    height: 40vh;
+    height: 50vh;
     position: absolute;
-    top: 50%;
+    top: 55%;
     padding:0px 30px 10px 30px;
     line-height: 30px;
 }
@@ -51,11 +51,11 @@ body{
     color: white;
     border: 1px solid black;
     border-radius: 30px;
-    font-size: 14px;
+    font-size: 10px;
     font-family: 'Barlow Condensed';
 }
 .s1{
-    font-size: 14px;
+    font-size: 10px;
     font-family: 'Barlow Condensed';
     color: hsl(231, 7%, 65%);
     letter-spacing: 4px;
@@ -77,7 +77,7 @@ p{
 }
 .btns{
     position: absolute;
-    top: 70%;
+    top: 85%;
     padding: 30px;
     margin-top: 10px;
 }
